hdone/objects/AuditSetting__c.object
<CustomObject>
    <description>Audit setting for reports</description>
    <fields>
        <fullName>AuditReportCount__c</fullName>
        <label>AuditReportCount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AuditSettingCost__c</fullName>
        <description>Sum of cost for AuditSetting. Will be used to price Amazon Mechanical Turk HIT</description>
        <formula>IF(NOT( ISBLANK( Question_1__c )) ,  Cost_Per_Question__c , 0) + IF(NOT( ISBLANK( Question_2__c )) , Cost_Per_Question__c, 0) + IF(NOT( ISBLANK( Question_3__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_4__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_5__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_6__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_7__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_8__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_9__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_10__c )) , Cost_Per_Question__c, 0) +IF(NOT( ISBLANK( Question_11__c )) ,  Cost_Per_Question__c , 0) + IF(NOT( ISBLANK( Question_12__c )) , Cost_Per_Question__c, 0) + IF(NOT( ISBLANK( Question_13__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_14__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_15__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_16__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_17__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_18__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_19__c )) , Cost_Per_Question__c, 0)+IF(NOT( ISBLANK( Question_20__c )) , Cost_Per_Question__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total cost for AuditSetting based on number of populated questions and cost per question.</inlineHelpText>
        <label>AuditSettingCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AuditSettingIdFormula__c</fullName>
        <formula>CASE( SourceOrg__c , &quot;Customer&quot;, CASESAFEID( Id),
&quot;HealthDetail&quot;,  ExternalId__c  ,
&quot;Error&quot;)

/* Checks to see if Primary record is shared from customer org or Master org
Also looks at lookup records for same thing
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuditSettingIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Confirmation object. Used for Provider Confirmations</description>
        <inlineHelpText>Confirmation object. Used for Provider Confirmations</inlineHelpText>
        <label>Confirmation</label>
        <referenceTo>Confirmation__c</referenceTo>
        <relationshipLabel>AuditSettings</relationshipLabel>
        <relationshipName>AuditSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Question__c</fullName>
        <description>Cost per question for AuditSetting. Necessary for user to arrive at an aggregate cost per question. System will compute formulaic cost across entire audit setting.</description>
        <inlineHelpText>Cost per question for AuditSetting.</inlineHelpText>
        <label>Cost Per Question</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custom_1__c</fullName>
        <description>Custom field for object. Field label may appear differently if edited using Translations.</description>
        <inlineHelpText>Custom field</inlineHelpText>
        <label>Custom 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_2__c</fullName>
        <description>Custom field for object. Field label may appear differently if edited using Translations.</description>
        <inlineHelpText>Custom field</inlineHelpText>
        <label>Custom 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External ID for object. Used for updates or add information from external systems.</description>
        <externalId>true</externalId>
        <inlineHelpText>External id, possibly from other systems.</inlineHelpText>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HitSettingFormula__c</fullName>
        <formula>Hit_Setting__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HitSettingFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hit_Setting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hit Setting</label>
        <referenceTo>Hit_Setting__c</referenceTo>
        <relationshipLabel>AuditSettings</relationshipLabel>
        <relationshipName>AuditSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <inlineHelpText>Instructions for completing the hit</inlineHelpText>
        <label>Instructions</label>
        <length>7500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q10_Answer_Choices__c</fullName>
        <description>Answer choices for Question 10</description>
        <inlineHelpText>Acceptable answer choices for this question.</inlineHelpText>
        <label>Question 10 Answer Choices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>1 week</fullName>
                </value>
                <value>
                    <fullName>2 weeks</fullName>
                </value>
                <value>
                    <fullName>Administrative Location Only</fullName>
                </value>
                <value>
                    <fullName>Address Listed - Based on IVR Message</fullName>
                </value>
                <value>
                    <fullName>Address Listed - Central Number</fullName>
                </value>
                <value>
                    <fullName>Address Listed - Person</fullName>
                </value>
                <value>
                    <fullName>Address Change - Slight</fullName>
                </value>
                <value>
                    <fullName>Answered By Person</fullName>
                </value>
                <value>
                    <fullName>Answering Machine - Business Closed</fullName>
                </value>
                <value>
                    <fullName>Answering Machine - Incorrect Message</fullName>
                </value>
                <value>
                    <fullName>Answering Machine - IVR</fullName>
                </value>
                <value>
                    <fullName>Answering Machine - Not Person Expected</fullName>
                </value>
                <value>
                    <fullName>Answering Machine - Person Expected</fullName>
                </value>
                <value>
                    <fullName>Appointments No - Hospital Location</fullName>
                </value>
                <value>
                    <fullName>Appointments No - No New Patients</fullName>
                </value>
                <value>
                    <fullName>Appointments No - Other</fullName>
                </value>
                <value>
                    <fullName>Appointments Yes - Walk In</fullName>
                </value>
                <value>
                    <fullName>Appointments Yes - With Call</fullName>
                </value>
                <value>
                    <fullName>Appointments Yes - With Records</fullName>
                </value>
                <value>
                    <fullName>Appointments Yes - With Referral</fullName>
                </value>
                <value>
                    <fullName>Busy Signal</fullName>
                </value>
                <value>
                    <fullName>Constant Busy Signal</fullName>
                </value>
                <value>
                    <fullName>Died</fullName>
                </value>
                <value>
                    <fullName>Disconnected Before Finished</fullName>
                </value>
                <value>
                    <fullName>Forgot To Ask</fullName>
                </value>
                <value>
                    <fullName>Incorrect Address - IVR</fullName>
                </value>
                <value>
                    <fullName>Incorrect Address - Person</fullName>
                </value>
                <value>
                    <fullName>Less than 1 week</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q11_Answer_Choices__c</fullName>
        <description>Answer choices for Question 11</description>
        <inlineHelpText>Acceptable answer choices for this question.</inlineHelpText>
        <label>Question 11 Answer Choices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q12_Answer_Choices__c</fullName>
        <description>Answer choices for Question 12</description>
        <inlineHelpText>Acceptable answer choices for this question.</inlineHelpText>
        <label>Question 12 Answer Choices</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_10_Comments__c</fullName>
        <description>Audit Question comments</description>
        <inlineHelpText>Audit Question comments</inlineHelpText>
        <label>Question 10 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_10_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 10 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_10_Type__c</fullName>
        <label>Question 10 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multi Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_10__c</fullName>
        <description>Audit Question</description>
        <inlineHelpText>Audit Question</inlineHelpText>
        <label>Question 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_11_Comments__c</fullName>
        <description>Audit Question comments</description>
        <inlineHelpText>Audit Question comments</inlineHelpText>
        <label>Question 11 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_11_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 11 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_11_Type__c</fullName>
        <label>Question 11 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multi Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_11__c</fullName>
        <description>Audit Question</description>
        <inlineHelpText>Audit Question</inlineHelpText>
        <label>Question 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_12_Comments__c</fullName>
        <description>Audit Question comments</description>
        <inlineHelpText>Audit Question comments</inlineHelpText>
        <label>Question 12 Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_12_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Question 12 Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question_12_Type__c</fullName>
        <label>Question 12 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Single Choice</fullName>
                </value>
                <value>
                    <fullName>Multi Choice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question_12__c</fullName>
        <description>Audit Question</description>
        <inlineHelpText>Audit Question</inlineHelpText>
        <label>Question 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Text__c</fullName>
        <formula>/* Gets name of Record Type for Salesforce to Salesforce sharing */
RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_AuditSettingId__c</fullName>
        <description>Remote AuditSetting Id</description>
        <inlineHelpText>Remote AuditSetting Id</inlineHelpText>
        <label>Remote AuditSettingId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Record_Type__c</fullName>
        <label>Remote Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <description>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</description>
        <externalId>true</externalId>
        <inlineHelpText>Sf2Sf PartnerConnectionId Id from PartnerNetworkConnection</inlineHelpText>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <description>Id from PartnerNetworkRecordConnection for shared record.</description>
        <inlineHelpText>Id from PartnerNetworkRecordConnection for shared record.</inlineHelpText>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <description>Sharing name for Salesforce to Salesforce. Uses Custom setting to get name as PartnerNetworkConnection name cannot be changed and can be confusing</description>
        <inlineHelpText>Sharing name for Salesforce to Salesforce from Custom Setting</inlineHelpText>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <description>Populates shared status for Salesforce to Salesforce connection. Cannot read status from object only from PartnerNetworkConnection object</description>
        <inlineHelpText>Shared status for Salesforce to Salesforce connection. Not real time.</inlineHelpText>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of AuditSetting</description>
        <inlineHelpText>Status of AuditSetting</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Under Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AuditSetting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASN-{000000}</displayFormat>
        <label>AuditSetting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditSettings</pluralLabel>
    <recordTypes>
        <fullName>Field_Visit</fullName>
        <active>true</active>
        <description>In person or telephone field visits</description>
        <label>Field Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>In_Person</fullName>
        <active>true</active>
        <description>In Person Audit Settings</description>
        <label>In Person</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master_Setting</fullName>
        <active>true</active>
        <description>Master Setting</description>
        <label>Master Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk_General</fullName>
        <active>true</active>
        <description>General Mturk tasks. Not phone related</description>
        <label>Mturk General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mturk_Phone</fullName>
        <active>true</active>
        <label>Mturk_Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Audit Settings for Phone</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Quality_Review</fullName>
        <active>true</active>
        <description>Quality Review AuditSettings</description>
        <label>Quality Review</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>